--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
